--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-flask==3.0.3
-flask-cors==3.0.10
-openai==0.28.0
-gunicorn==22.0.0
+Flask==3.0.3
+Flask-Cors==3.0.10
 requests==2.31.0
+gunicorn==22.0.0
+python-dotenv==1.0.0
